--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Snake Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="Graphics/logo.png">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
     <div class="main">
@@ -16,8 +20,13 @@
             <span class="score">SCORE : 0</span>
             <span class="b-score">HIGH SCORE : 0</span>
         </div>
-        <div class="board-grid">
-           
+        <div class="board-grid"> 
+        </div>
+        <div class="controller">
+            <i data-key="ArrowLeft" class="ri-arrow-left-line"></i>
+            <i data-key="ArrowUp" class="ri-arrow-up-line"></i>
+            <i data-key="ArrowDown" class="ri-arrow-down-line"></i>
+            <i data-key="ArrowRight" class="ri-arrow-right-line"></i>
         </div>
         <!-- <div id="snake" class="snake"></div>
         <div id="food" class="food"></div> -->
